[gd_scene load_steps=39 format=2]

[ext_resource path="res://ressources/Images_intro/noir.png" type="Texture" id=1]
[ext_resource path="res://ressources/Styles&Polices/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Intro.gd" type="Script" id=3]
[ext_resource path="res://ressources/Styles&Polices/curseur.png" type="Texture" id=4]
[ext_resource path="res://ressources/Joueur/Gunner_Green_Idle.png" type="Texture" id=5]
[ext_resource path="res://ressources/FX/Teleportation.png" type="Texture" id=6]
[ext_resource path="res://ressources/Images_intro/blanc.png" type="Texture" id=7]
[ext_resource path="res://ressources/Sons/BGM/Intro.ogg" type="AudioStream" id=8]
[ext_resource path="res://ressources/Sons/SE/Teleport1.ogg" type="AudioStream" id=9]
[ext_resource path="res://ressources/Sons/SE/Teleport2.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=46]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 128.498, 128.498, 128.498, 1 ) ]
}

[sub_resource type="Animation" id=47]
resource_name = "Fades"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 0.0156863, 0.0117647, 0.0784314, 0.745098 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0.0392157, 0.301961, 0.733333 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=49]
size = 18
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=50]
default_font = SubResource( 49 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 0, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 0, 20, 10, 10 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 0, 30, 10, 10 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 0, 480, 480, 480 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 480, 480, 480, 480 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 0, 960, 480, 480 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 480, 960, 480, 480 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 0, 1440, 480, 480 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 480, 1440, 480, 480 )

[sub_resource type="SpriteFrames" id=56]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=57]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 5 ),
"transitions": PoolRealArray( 1.07177, 3.03143, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.2, 0.2 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5, 5 ),
"transitions": PoolRealArray( 1, 5.09824, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ) ]
}

[sub_resource type="Animation" id=58]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 128.498, 128.498, 128.498, 1 ) ]
}

[sub_resource type="Animation" id=59]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=65]
animations = [ {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Image"]
pause_mode = 1
anims/FadeIn = SubResource( 46 )
anims/Fades = SubResource( 47 )

[node name="Panneau" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -155.0
margin_right = -15.0
margin_bottom = -9.0
custom_styles/panel = SubResource( 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texte" type="RichTextLabel" parent="Panneau"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -18.0
margin_bottom = -18.0
rect_clip_content = false
theme = SubResource( 50 )
bbcode_enabled = true
bbcode_text = "An 20XX, la planète Terre subit un [shake rate=10 level=10]déficit sevère[/shake] en [color=red]hydrocarbures[/color]..."
text = "An 20XX, la planète Terre subit un déficit sevère en hydrocarbures..."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Panneau"]

[node name="Indicateur" type="AnimatedSprite" parent="Panneau"]
position = Vector2( 795.64, 122.332 )
scale = Vector2( 2, 2 )
frames = SubResource( 55 )
frame = 2
playing = true

[node name="Teleportail" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 426, 240 )
scale = Vector2( 1e-05, 1e-05 )
frames = SubResource( 56 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Teleportail"]
anims/Grandir = SubResource( 57 )

[node name="Ecran_blanc" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ecran_blanc"]
pause_mode = 1
anims/FadeIn = SubResource( 58 )
anims/Fades = SubResource( 59 )

[node name="Texture_joueur" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 426, 240 )
scale = Vector2( 2, 2 )
frames = SubResource( 65 )
frame = 1
playing = true

[node name="Musique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="Teleportail1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
pitch_scale = 0.7

[node name="Teleportail2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 0.85

[connection signal="tween_completed" from="Panneau/Tween" to="." method="_on_Tween_tween_completed"]
